Résolution nom de package.

--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Plymouth-WRC</name>
+  <name>Plymouth-Internship-2019</name>
   <version>0.0.0</version>
-  <description>The Plymouth-WRC package</description>
+  <description>The Plymouth-Internship-2019 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
